<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>FilterWidgetAdvancedTab</class>
 <widget class="QWidget" name="FilterWidgetAdvancedTab">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>400</width>
    <height>300</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Form</string>
  </property>
  <layout class="QVBoxLayout" name="verticalLayout">
   <item>
    <widget class="QLabel" name="label">
     <property name="text">
      <string>Enter LDAP filter:</string>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QPlainTextEdit" name="ldap_filter_edit"/>
   </item>
  </layout>
 </widget>
 <resources/>
 <connections/>
</ui>
